--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   browser: ^0.10.0
   polymer_elements: ^1.0.0-rc.8
   polymer: ^1.0.0-rc.15
+  rpc: ^0.5.0
   web_components: ^0.12.0
 
 transformers:
