--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   browser: ^0.10.0
+  mongo_dart: ^0.2.10
   polymer_elements: ^1.0.0-rc.8
   polymer: ^1.0.0-rc.15
   rpc: ^0.5.0
