--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: 'SMSChorinator'
 version: 0.0.1
-description: A web app built using polymer.dart.
+description: A web app built using Angular 2.
 author: AlexNPavel <alexpavel123@gmail.com>
 homepage: https://www.alexpavel.com
 
@@ -8,18 +8,15 @@ environment:
   sdk: '>=1.9.0 <2.0.0'
 
 dependencies:
-  browser: ^0.10.0
+  angular2: ^2.0.0
   mongo_dart: ^0.2.10
-  polymer_elements: ^1.0.0-rc.8
-  polymer: ^1.0.0-rc.15
   rpc: ^0.5.0
-  web_components: ^0.12.0
+
+dev_dependencies:
+  browser: ^0.10.0
+  dart_to_js_script_rewriter: ^1.0.1
 
 transformers:
-- polymer:
-    entry_points: web/index.html
-- $dart2js:
-    minify: true
-    commandLineOptions:
-    - --trust-type-annotations
-    - --trust-primitives
+- angular2:
+    entry_points: web/main.dart
+- dart_to_js_script_rewriter
